not-found-update

--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,1 +1,1 @@
-{"ignoredFilesOrFolders":[],"openFiles":["enhancementOfJobbyApp/package.json"],"fileToBeOpened":"enhancementOfJobbyApp/.eslintrc"}
+{"ignoredFilesOrFolders":[],"openFiles":["enhancementOfJobbyApp/.eslintrc","enhancementOfJobbyApp/package.json","enhancementOfJobbyApp/src/components/Jobs/index.js","enhancementOfJobbyApp/src/components/NotFound/index.css","enhancementOfJobbyApp/src/components/Jobs/index.css","enhancementOfJobbyApp/src/App.js"],"fileToBeOpened":"enhancementOfJobbyApp/src/components/NotFound/index.js"}
